Fixed Destination Inout Field

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -75,10 +75,11 @@
 .headerSearchInput {
   border: none;
   outline: none;
+  color: cadetblue;
 }
 
 .headerSearchText {
-  color: lightgray;
+  color: cadetblue;
   cursor: pointer;
 }
 
